--- a/content/_index.html
+++ b/content/_index.html
@@ -9,7 +9,7 @@ title: Home
 		<i class="fa fa-pen"></i> Contributing Guidelines <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 	<a class="btn btn-lg btn-danger mr-3 mb-4" href="https://about.gitlab.com/handbook">
-		<i class="fa fa-book"></i> Legacy Handbook <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+		<i class="fa fa-book"></i> Current Public Handbook <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 </div>
 
