Quickfix for the use of handbook on the homepage
It was pointed out the use of "Handbook" was a little inconsistent on
the handbooks new homepage.  This was just a quick fix for that.

--- a/content/_index.html
+++ b/content/_index.html
@@ -2,7 +2,7 @@
 title: Home
 ---
 
-{{< blocks/cover title="Welcome to the alpha version of the new GitLab handbook" image_anchor="top" color="orange" >}}
+{{< blocks/cover title="Welcome to the alpha version of the new GitLab Handbook" image_anchor="top" color="orange" >}}
 
 <div class="mx-auto">
 	<a class="btn btn-lg btn-info mr-3 mb-4" href="{{< relref "/docs/" >}}">
