Additional Fixes for OpenGraph

--- a/content/_index.html
+++ b/content/_index.html
@@ -1,5 +1,5 @@
 ---
-title: Home
+title: The GitLab Handbook
 ---
 
 {{< blocks/cover title="Welcome to the alpha version of the new GitLab Handbook" image_anchor="top" color="orange" >}}
